# socials

./: app.py  config.py  models.py  pasted_text_1726338309188.txt  pyproject.toml  scraper.py  social_media_handler.py  utils.py
static/css/: styles.css
static/js/: analytics.js  dashboard.js  posting.js
templates/: analytics.html  base.html  dashboard.html  posting.html
